# Fontaine-Editor

./: README.md  package.json
.github/: FUNDING.yml
app-backend/: .gitignore  config-overrides.js  package.json
app-backend/Resources/Themes/: Light.js  Light.json
app-backend/public/: electron.js  index.html  preload.js
app-backend/public/main/: documentAPI.js  electron.js  pluginAPI.js  pluginVM.js
app-backend/public/main/native/r-fs/native/: Cargo.toml
app-backend/public/main/native/r-fs/native/src/: lib.rs
app-backend/src/: Interface.js  index.js  indexStyles.css  testDocs.js
app-backend/test-project-clean/: index.ftne
app-frontend/: package.json
app-frontend/src/: App.js  Interface.js  index.js  indexStyles.css  testDocs.js
app-frontend/src/components/: AppBar.js  AppToolBar.js  AutoSaveHandler.js  CollapsableDiv.js  ColourPicker.js  Corkboard.js  CustomDropdown.js  CustomModal.js  CustomSubwindow.js  EditableTitle.js  Editor.js  EditorArea.js  EditorToolbar.js  FolderTree.js  HeaderArea.js  Inspector.js  KeyboardFocusableButton.js  LeftPanel.js  ModalHandler.js  MultiDocQuill.js  MultiDocSlate.js  RightPanel.js  SettingsHandler.js  SettingsModal.js  ShortcutHandler.js  SlateInstance.js  StatefulInputs.js  StatusDisplay.js  (+3 more)
src/: App.js  fontawesome.js  index.js
src/components/: EditableTitle.js  Editor.js  FolderTree.js  HeaderArea.js  KeyboardFocusableButton.js  LeftPanel.js  MultiDocQuill.js  Workspace.js
src/store/: index.js
src/styles/: editor-area.scss  index.scss  keyboard-focusable-button.scss  left-panel.scss  main.scss
(+118 files in other folders)
