[package]
name = "r-fs"
version = "0.1.0"
authors = ["EndaHallahan <none>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "r_fs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
serde_json = "1.0"
chrono = "0.4.11"
tempfile = "3.1.0"
